- Added greeting section - Added "controls" for projects - Added elements to trending and announcement section - Fixed search bar css and profile spacing

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,14 @@
     font-size: calc(0.5vh + 1rem);
 }
 
+* html .container {
+    height: 100%;
+}
+
 .container{
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
-    grid-template: 15% 15% 35% 35%/ 20% 55% 25%;
+    grid-template: 150px 150px auto-fill auto-fill/ 20% 55% 25%;
 }
 
 .container > div {
@@ -71,14 +75,31 @@
     align-items: center;
 }
 
-.search, .account{
+.search-container, .account{
     display: flex;
     align-items: center;
     column-gap: 10px;
 }
+
+.search{
+    width: max(50%, 500px);
+    border: none;
+    background-color: #efefef;
+}
+
+.search:focus{
+    border: none;
+}
+
+.account{
+    display: flex;
+    column-gap: 20px;
+}
+
 .profile{
     display: flex;
     align-items: center;
+    column-gap: 10px;
 }
 
 .nav-icon{
@@ -86,12 +107,50 @@
     width: 40px;
 }
 
+.profile-picture{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%
+}
 
-
-
+/* greeting */
 
 .greet-container{
     grid-area: 2 / 2 / 3 / 4;
+    display: flex;  
+    align-items: center;
+    justify-content: space-between;
+}
+
+.greeting{
+    display: flex;
+    column-gap: 20px;
+}
+
+.name{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.profile-picture-big{
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+}
+
+.controls{
+    display: flex;
+    column-gap: 1rem;
+}
+
+.btn{
+    border-radius: 50px;
+    border: none;
+    padding: 1rem 2rem 1rem 2rem;
+    width: min(200px);
+    background-color: #e0115f;
+    color: white;
 }
 
 
@@ -113,13 +172,18 @@
 
 .card{
     background-color: white;
-    height: 200px;
     padding: 1rem;
-    border-left: 0.5rem solid pink;
+    border-left: 0.5rem solid #8EAF9D;
     border-radius: 5%;
     display: flex;
     flex-direction: column;
-    row-gap: 5px;
+    row-gap: 10px;
+}
+
+.project-controls{
+    display: flex;
+    justify-content: end;
+    column-gap: 10px;
 }
 
 /*announcements css*/
@@ -137,11 +201,10 @@
 
 .extra-card{
     background-color: white;
-    height: 200px;
     border-radius: 5%;
     display: flex;
     flex-direction: column;
-    row-gap: 5px;
+    row-gap: 20px;
     padding: 1rem;
 }
 
@@ -157,4 +220,5 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    border-radius: 5%;
 }
